--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = []
 dev = [
   "pytest>=7.4"
 ]
+llm = [
+  "openai>=1.0"
+]
 
 [build-system]
 requires = ["setuptools>=61", "wheel"]
