--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,16 @@ dependencies = []
 
 [project.optional-dependencies]
 dev = [
-  "pytest>=7.4"
+  "pytest>=7.4",
+  "fastapi>=0.111",
+  "uvicorn[standard]>=0.30"
 ]
 llm = [
   "openai>=1.0"
+]
+service = [
+  "fastapi>=0.111",
+  "uvicorn[standard]>=0.30"
 ]
 
 [build-system]
